:hammer: Fix alignment of pagination icon

--- a/src/scss/ant-reset.scss
+++ b/src/scss/ant-reset.scss
@@ -121,3 +121,9 @@ h6 {
   line-height: 1;
   height: auto;
 }
+
+.ant-pagination-item-link {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
